# CYPForge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CYPForge_Agent安装使用说明.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  cypforge.cmd  pyproject.toml
benchmark/: .gitignore  README.md  config.example.json  render_prompt.py
benchmark/1Z10/: COU_ideal.sdf
benchmark/1Z11/: 8MO_ideal.sdf
benchmark/4EJJ/: NCT.frcmod  NCT_multiwfn_resp.mol2  SHA256SUMS.txt  nicotine.sdf
benchmark/prompts/: full_test.md.tmpl  no_cypforge_test.md.tmpl  no_outer_shell_test.md.tmpl
scripts/: build_mode11_hcomplete_complex.py  cif2pdb.py  complex_global_audit.py  complex_pre_md_equilibration.py  complex_protonation_finalize.py  complex_solvation_ionization.py  cypforge_run.py  heme_mapping_leapin.py  heme_only.py  ligand_gpu4pyscf_esp.py  ligand_mapping_leapin.py  ligand_mapping_resolver.py  ligand_pose_frame_check.py  ligand_pose_parameterize.py  third_core_stress_test.py  validate_complex_pre_md_run.py  validate_solvation_tleap.py  vina_crystal_rmsd_select_pose.py
skills/cypforge/: SKILL.md  core1_prepare_heme_cym.md  core2_prepare_ligand_resp_gaff2.md  core3_finalize_protonation.md  core3_render_pre_md.md  core3_run_pre_md.md  core3_solvate_ionize.md  environment_check.md  equilibration_decision.md  execution_plan.md  global_audit.md  production_readiness_check.md  skills_manifest.json
src/cypforge/: __init__.py
src/cypforge/cys/: __init__.py  axial_identification.py  fe_s_geometry.py  interface_spec.py  proximal_rewrite.py
src/cypforge/data/: __init__.py
src/cypforge/heme/: __init__.py  mapping.py  prepare.py
src/cypforge_core/: __init__.py  cli.py  complex_global_audit.py  complex_pre_md_equilibration.py  complex_protonation_finalize.py  complex_solvation_ionization.py  heme.py  heme_mapping_leapin.py  heme_parameterization.py  io.py  ligand_gpu4pyscf_esp.py  ligand_heavy_hypergraph_resolver.py  ligand_mapping_leapin.py  ligand_mapping_resolver.py  ligand_pose_frame.py  ligand_pose_parameterization.py  ligand_vina_pose_selection.py  local_knowledge.py
src/cypforge_core/_qm/: __init__.py  qm_restrained_ligand_opt.py
tests/: test_heme_core.py  test_orchestrator.py
(+15 files in other folders)
